# kronos

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  env.sample
bot/: main.py
bot/utils/: config.py  logs.py
kronos/: bot.py  main.py
kronos/modules/: help.py
kronos/utils/: colors.py  config.py  logs.py
src/: api_calls.rs  bot.rs  config.rs  db.rs  main.rs
src/events/: mod.rs
src/interaction/: mod.rs
src/interaction/commands/: about.rs  changelog.json  changelog.rs  latency.rs  mod.rs  roles.rs  server.rs  setup.rs  verify.rs
src/interaction/component/: mod.rs
src/models/: guild.rs  mod.rs
