[package]
name = "kronos"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model = "0.13.7"
twilight-http = "0.13.3"
twilight-gateway = "0.13.3"
twilight-cache-inmemory = "0.13.1"
twilight-standby = "0.13.2"
twilight-mention = "0.13.0"
twilight-util = { version = "0.13.3", features = ["builder", "snowflake"] }
# twilight-interactions = "0.13.0"

tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "sync", "parking_lot", "signal"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.147"
serde_with = "2.0.1"
serde_json = "1.0.87"
reqwest = "0.11.12"
mongodb = "2.3.1"
thiserror = "1.0.37"
anyhow = "1.0.66"
chrono = "0.4.22"